# demo-used-car

./: README.md  demo-web.py  pyproject.toml  requirements.txt
app/: data_handler.py  main.py  utils.py
